Add loading and custom dark mode toggle

--- a/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/PersonalData.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Pages/Manage/PersonalData.razor
@@ -19,7 +19,7 @@
             <Button type="submit">Download</Button>
         </form>
         <p>
-            <Button Variant="ButtonVariant.Destructive" id="delete" href="Account/Manage/DeletePersonalData">Delete</Button>
+            <Button Size="ButtonSize.Small" Variant="ButtonVariant.Destructive" id="delete" href="Account/Manage/DeletePersonalData">Delete</Button>
         </p>
     </div>
 </div>
