--- a/BlazorApp7/BlazorApp7.Client/Pages/Counter.razor
+++ b/BlazorApp7/BlazorApp7.Client/Pages/Counter.razor
@@ -1,12 +1,9 @@
 ﻿@page "/counter"
-
 @rendermode InteractiveAuto
 
-<PageTitle>Counter</PageTitle>
+<Heading1>Counter</Heading1>
 
-<h1>Counter</h1>
-
-<p role="status">Current count: @currentCount</p>
+<p class="my-4">Current count: @currentCount</p>
 
 <Button OnClick="IncrementCount">Click me</Button>
 
