--- a/BlazorApp7/BlazorApp7/Components/Pages/Error.razor
+++ b/BlazorApp7/BlazorApp7/Components/Pages/Error.razor
@@ -4,26 +4,33 @@
 
 <PageTitle>Error</PageTitle>
 
-<h1>Error.</h1>
-<h2>An error occurred while processing your request.</h2>
+<div class="mx-auto">
+    <section class="mb-16 mt-16 text-center md:mb-12">
+        <h1 class="text-4xl font-extrabold tracking-tight text-gray-900 dark:text-gray-50 sm:text-5xl md:text-6xl">
+            Error.
+        </h1>
+        <Heading2 class="text-danger">An error occurred while processing your request.</Heading2>
+    </section>
+    <div class="prose mx-auto mb-24 lg:prose-xl">
+        @if (ShowRequestId)
+        {
+            <p>
+                <strong>Request ID:</strong> <code>@RequestId</code>
+            </p>
+        }
 
-@if (ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+        <h3>Development Mode</h3>
+        <p>
+            Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+        </p>
+        <p>
+            <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
+            It can result in displaying sensitive information from exceptions to end users.
+            For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
+            and restarting the app.
+        </p>
+    </div>
+</div>
 
 @code{
     [CascadingParameter]
