--- a/BlazorApp7/BlazorApp7/Components/Pages/Weather.razor
+++ b/BlazorApp7/BlazorApp7/Components/Pages/Weather.razor
@@ -14,23 +14,23 @@
     }
     else
     {
-        <table>
-            <thead>
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
-                    <th>Date</th>
-                    <th>Temp. (C)</th>
-                    <th>Temp. (F)</th>
-                    <th>Summary</th>
+                     <th scope="col" class="px-6 py-3">Date</th>
+                     <th scope="col" class="px-6 py-3">Temp. (C)</th>
+                     <th scope="col" class="px-6 py-3">Temp. (F)</th>
+                     <th scope="col" class="px-6 py-3">Summary</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var forecast in forecasts)
                 {
-                    <tr>
-                        <td>@forecast.Date.ToString("d")</td>
-                        <td>@forecast.TemperatureC</td>
-                        <td>@forecast.TemperatureF</td>
-                        <td>@forecast.Summary</td>
+                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                        <td class="px-6 py-4">@forecast.Date.ToString("d")</td>
+                        <td class="px-6 py-4">@forecast.TemperatureC</td>
+                        <td class="px-6 py-4">@forecast.TemperatureF</td>
+                        <td class="px-6 py-4">@forecast.Summary</td>
                     </tr>
                 }
             </tbody>
