--- a/BlazorApp7/BlazorApp7/Components/_Imports.razor
+++ b/BlazorApp7/BlazorApp7/Components/_Imports.razor
@@ -11,6 +11,7 @@
 
 @using BlazorApp7
 @using BlazorApp7.Components
+@using BlazorApp7.Components.Shared
 @using BlazorApp7.Client
 
 @using BlazorApp7.Components.Tailwind
