--- a/BlazorApp7/BlazorApp7/Styles/app.src.css
+++ b/BlazorApp7/BlazorApp7/Styles/app.src.css
@@ -238,6 +238,10 @@ select {
         font-synthesis-weight: none;
         text-rendering: optimizeLegibility;
     }
+
+    h1:focus {
+        outline: none;
+    }
 }
 
 @layer utilities {
