--- a/BlazorApp7/BlazorApp7.Client/_Imports.razor
+++ b/BlazorApp7/BlazorApp7.Client/_Imports.razor
@@ -10,5 +10,6 @@
 
 @using BlazorApp7.Client
 
+@using BlazorApp7.Components.Extensions
 @using BlazorApp7.Components.Tailwind
 @using static BlazorApp7.Components.Tailwind.Button
