--- a/BlazorApp7/BlazorApp7/wwwroot/css/app.css
+++ b/BlazorApp7/BlazorApp7/wwwroot/css/app.css
@@ -817,6 +817,18 @@ h1:focus {
   margin-top: 2rem;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .block {
   display: block;
 }
@@ -877,6 +889,14 @@ h1:focus {
   height: 100%;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
+.max-h-24 {
+  max-height: 6rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -909,6 +929,10 @@ h1:focus {
   width: 100%;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .max-w-4xl {
   max-width: 56rem;
 }
@@ -935,6 +959,10 @@ h1:focus {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-24 {
+  max-width: 6rem;
 }
 
 .flex-1 {
@@ -1077,6 +1105,10 @@ h1:focus {
   border-radius: calc(var(--radius) - 4px);
 }
 
+.rounded-lg {
+  border-radius: var(--radius);
+}
+
 .border {
   border-width: 1px;
 }
@@ -1194,6 +1226,11 @@ h1:focus {
   background-color: rgb(254 252 232 / var(--tw-bg-opacity, 1));
 }
 
+.bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity, 1));
+}
+
 .fill-gray-600 {
   fill: #4b5563;
 }
@@ -1212,6 +1249,10 @@ h1:focus {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-2 {
@@ -1267,6 +1308,16 @@ h1:focus {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .pl-3 {
@@ -1919,6 +1970,28 @@ select {
 }
 
 @media (min-width: 640px) {
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:items-center {
+    align-items: center;
+  }
+
+  .sm\:justify-between {
+    justify-content: space-between;
+  }
+
+  .sm\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .sm\:rounded-md {
     border-radius: calc(var(--radius) - 2px);
   }
@@ -1929,6 +2002,14 @@ select {
 
   .sm\:pl-16 {
     padding-left: 4rem;
+  }
+
+  .sm\:pt-1 {
+    padding-top: 0.25rem;
+  }
+
+  .sm\:text-left {
+    text-align: left;
   }
 
   .sm\:text-4xl {
@@ -1944,6 +2025,11 @@ select {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .sm\:shadow {
@@ -2026,6 +2112,10 @@ select {
   }
 }
 
+.dark\:border:where(.dark, .dark *) {
+  border-width: 1px;
+}
+
 .dark\:border-gray-600:where(.dark, .dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity, 1));
@@ -2034,6 +2124,11 @@ select {
 .dark\:border-gray-700:where(.dark, .dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
+}
+
+.dark\:border-gray-800:where(.dark, .dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(31 41 55 / var(--tw-border-opacity, 1));
 }
 
 .dark\:bg-black:where(.dark, .dark *) {
@@ -2084,6 +2179,11 @@ select {
 .dark\:bg-yellow-200:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(254 240 138 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-green-800:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 101 52 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:fill-gray-300:where(.dark, .dark *) {
@@ -2153,6 +2253,16 @@ select {
 .dark\:text-white:where(.dark, .dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-gray-200:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-gray-400:where(.dark, .dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
 .dark\:ring-offset-black:where(.dark, .dark *) {
