--- a/BlazorApp7/BlazorApp7/Components/_Imports.razor
+++ b/BlazorApp7/BlazorApp7/Components/_Imports.razor
@@ -14,5 +14,6 @@
 @using BlazorApp7.Components.Shared
 @using BlazorApp7.Client
 
+@using BlazorApp7.Components.Extensions
 @using BlazorApp7.Components.Tailwind
 @using static BlazorApp7.Components.Tailwind.Button
